--- a/index.html
+++ b/index.html
@@ -1,8 +1,1 @@
-<html>  
-    <head>    
-        <title>My First Site!</title>  
-    </head>  
-    <body>    
-        <p>I created my first web page using GitHub Pages! </p>
-    </body>
-</html>
+Hello
