--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>Resume - Start Bootstrap Theme</title>
+  <title>Resume - Md. Abdul Kaium</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,7 +27,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Clarence Taylor</span>
+      <span class="d-block d-lg-none">Md. Abdul Kaium</span>
       <span class="d-none d-lg-block">
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
       </span>
@@ -63,18 +63,18 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-0">Clarence
-          <span class="text-primary">Taylor</span>
+        <h1 class="mb-0">Md. Abdul
+          <span class="text-primary"> Kaium</span>
         </h1>
-        <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-          <a href="mailto:name@email.com">name@email.com</a>
+        <div class="subheading mb-5">29/2 lake circus, Kalabagan, Dhaka-1215, Bangladesh
+          <a href="mailto:name@email.com">ab.kaiumcse11@gmail.com</a>
         </div>
-        <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+        <p class="lead mb-5">Seeking a challenging and progressive career in Information Technology and Software Engineering using my inner strengths, skills and creative thinking to gain future exposure, strengths and experiences</p>
         <div class="social-icons">
-          <a href="#">
+          <a href="https://www.linkedin.com/in/abdul-kaium-081b5b10b/">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a href="#">
+          <a href="https://github.com/kaium11">
             <i class="fab fa-github"></i>
           </a>
           <a href="#">
@@ -95,26 +95,26 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Senior Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">Samsung R&D Bangladesh</div>
+            <!--<p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>-->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2013 - Present</span>
+            <span class="text-primary">November 2018 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">Web Developer</h3>
-            <div class="subheading mb-3">Intelitec Solutions</div>
-            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+            <h3 class="mb-0">Software Engineer</h3>
+            <div class="subheading mb-3">Nirapod Bangla Solutions Ltd.</div>
+            <!--<p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>-->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">December 2011 - March 2013</span>
+            <span class="text-primary">April 2017 - October 2018</span>
           </div>
         </div>
-
+<!--
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
             <h3 class="mb-0">Junior Web Designer</h3>
@@ -136,7 +136,7 @@
             <span class="text-primary">September 2008 - June 2010</span>
           </div>
         </div>
-
+-->
       </div>
 
     </section>
@@ -149,24 +149,24 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">University of Colorado Boulder</h3>
-            <div class="subheading mb-3">Bachelor of Science</div>
-            <div>Computer Science - Web Development Track</div>
-            <p>GPA: 3.23</p>
+            <h3 class="mb-0">Chittagong University of Engineering and Technology (CUET)</h3>
+            <div class="subheading mb-3">Bachelor of Computer Science and Engineering</div>
+            <!--<div>Computer Science - Web Development Track</div>
+            <p>GPA: 3.23</p>-->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2006 - May 2010</span>
+            <span class="text-primary">May 2012 - March 2017</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between">
           <div class="resume-content">
-            <h3 class="mb-0">James Buchanan High School</h3>
-            <div class="subheading mb-3">Technology Magnet Program</div>
-            <p>GPA: 3.56</p>
+            <h3 class="mb-0">Govt. Science College</h3>
+            <div class="subheading mb-3">Science</div>
+           <!-- <p>GPA: 3.56</p> -->
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2002 - May 2006</span>
+            <span class="text-primary">April 2009 - July 2011</span>
           </div>
         </div>
 
@@ -188,9 +188,9 @@
             <i class="fab fa-css3-alt"></i>
           </li>
           <li class="list-inline-item">
-            <i class="fab fa-js-square"></i>
+            <i class="fab fa-java"></i>
           </li>
-          <li class="list-inline-item">
+        <!--  <li class="list-inline-item">
             <i class="fab fa-angular"></i>
           </li>
           <li class="list-inline-item">
@@ -216,10 +216,10 @@
           </li>
           <li class="list-inline-item">
             <i class="fab fa-npm"></i>
-          </li>
+          </li> -->
         </ul>
 
-        <div class="subheading mb-3">Workflow</div>
+       <!-- <div class="subheading mb-3">Workflow</div>
         <ul class="fa-ul mb-0">
           <li>
             <i class="fa-li fa fa-check"></i>
@@ -234,7 +234,7 @@
             <i class="fa-li fa fa-check"></i>
             Agile Development &amp; Scrum</li>
         </ul>
-      </div>
+      </div> -->
     </section>
 
     <hr class="m-0">
@@ -253,32 +253,36 @@
       <div class="w-100">
         <h2 class="mb-5">Awards &amp; Certifications</h2>
         <ul class="fa-ul mb-0">
+		<li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+             18<sup>th</sup>position, 7<sup>th</sup> varsity rank and 1<sup>st</sup> divisional rank at ICPC-2014 Dhaka Site at BUBT</li> 
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Google Analytics Certified Developer</li>
+             18<sup>th</sup>position, 8<sup>th</sup> varsity rank and 1<sup>st</sup> divisional rank at ICPC-2015 Dhaka Site at NSU</li>    
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
-            Mobile Web Specialist - Google Certification</li>
+            6<sup>th</sup>
+            position at IUPC-2016 at SUB</li>
+			<li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            13<sup>th</sup>
+            position at NCPC-2015 at RUET</li>
+          <li>
+            <i class="fa-li fa fa-trophy text-warning"></i>
+            20<sup>th</sup>
+            position at NCPC-2016 at UAP</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009</li>
+            position at regional IUPC-2014 at USTC</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             1<sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)</li>
+            Runner Up position at regional IUPC-2014 at IIUC</li>
           <li>
             <i class="fa-li fa fa-trophy text-warning"></i>
             2<sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            1<sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006</li>
-          <li>
-            <i class="fa-li fa fa-trophy text-warning"></i>
-            3<sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005</li>
+            Runner Up position at regional IUPC-2014 at CUET IUPC</li>
         </ul>
       </div>
     </section>
