--- a/index.html
+++ b/index.html
@@ -298,9 +298,9 @@
 
   </div>
 	  
-<!-- Start of WebFreeCounter Code -->
+<!-- Start of WebFreeCounter Code 
 <a href="https://www.webfreecounter.com/" target="_blank"><img src="https://www.webfreecounter.com/hit.php?id=gmkkcnk&nd=6&style=44" border="0" alt="visitor counter"></a>
-<!-- End of WebFreeCounter Code -->
+ End of WebFreeCounter Code -->
 	  
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
