--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h1 class="mb-0">Md. Abdul
           <span class="text-primary"> Kaium</span>
         </h1>
-        <div class="subheading mb-5">29/2 lake circus, Kalabagan, Dhaka-1215, Bangladesh
+        <div class="subheading mb-5">44/27 North Dhanmodi, Kalabagan, Dhaka-1215, Bangladesh
           <a href="mailto:ab.kaiumcse11@gmail.com">ab.kaiumcse11@gmail.com</a>
         </div>
         <p class="lead mb-5">Seeking a challenging and progressive career in Information Technology and Software Engineering using my inner strengths, skills and creative thinking to gain future exposure, strengths and experiences</p>
